# TXT

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: android.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/.github/workflows/: android.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/usr/lib/: README.md
android/app/src/main/cpp/: hello.c  jni_bridge.cpp  terminal_engine.cpp  terminal_engine.h
android/app/src/main/java/com/tx/terminal/: MainActivity.kt  SettingsActivity.kt  TXApplication.kt
android/app/src/main/java/com/tx/terminal/native/: NativeTerminal.kt
android/app/src/main/java/com/tx/terminal/service/: TerminalService.kt
android/app/src/main/java/com/tx/terminal/session/: TerminalSession.kt  TerminalSessionManager.kt
android/app/src/main/java/com/tx/terminal/util/: UserspaceInstaller.kt
android/app/src/main/java/com/tx/terminal/view/: SessionTabView.kt  TerminalView.kt  VirtualKeyBar.kt
android/app/src/main/res/drawable/: ic_add.xml  ic_close.xml  ic_keyboard.xml  ic_launcher_foreground.xml  ic_send.xml  key_background.xml  key_background_pressed.xml  running_indicator.xml  tab_background_active.xml  tab_background_inactive.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  view_session_tab.xml  view_virtual_keybar.xml
android/app/src/main/res/menu/: main_menu.xml  terminal_context_menu.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  preferences.xml
